...
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/recipe_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_big"
            android:text="Recipe Name"
            android:textSize="18sp"
...
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="@dimen/margin_normal"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:text="@string/steps"
            android:id="@+id/steps_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ingredients"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintLeft_toLeftOf="parent"
...
