...
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="@dimen/player_height" />

    <TextView
        android:id="@+id/step_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/playerView"
        android:text=""
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintLeft_toLeftOf="parent"
...
